--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
+    "method-override": "^2.3.7",
     "mongoose": "^4.7.0",
     "mpromise": "^0.5.5",
+    "multer": "^1.2.0",
     "shell-arguments": "^1.2.3",
     "valid-objectid": "0.0.2"
   },
