--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "atividade de webservice",
   "main": "sources/index.js",
   "scripts": {
+    "pretest": "scripts/lint.sh",
     "test": "scripts/test.sh",
+    "lint": "scripts/lint.sh",
     "start": "scripts/start.sh",
-    "dev": "scripts/dev.sh",
-    "lint": "scripts/lint.sh"
+    "dev": "scripts/dev.sh"
   },
   "repository": {
     "type": "git",
