--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^7.1.9",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.0",
+    "mongoose-private": "^0.1.3",
     "mpromise": "^0.5.5",
     "multer": "^1.2.0",
     "shell-arguments": "^1.2.3",
@@ -40,6 +41,7 @@
     "babel-watch": "^2.0.3",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "chai-things": "^0.2.0",
     "eslint": "^3.12.1",
     "faker": "^3.1.0",
     "istanbul": "^0.4.5",
