--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "chai-things": "^0.2.0",
     "eslint": "^3.12.1",
     "faker": "^3.1.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "1.0.0-alpha.2",
     "mocha": "^3.2.0"
   }
 }
