--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chai-things": "^0.2.0",
+    "coveralls": "^2.11.15",
     "eslint": "^3.12.1",
     "faker": "^3.1.0",
     "istanbul": "1.0.0-alpha.2",
