--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "description": "atividade de webservice",
-  "main": "sources/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "pretest": "scripts/lint.sh",
     "test": "scripts/test.sh",
