--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
+    "i": "^0.3.5",
     "jsonwebtoken": "^7.1.9",
     "method-override": "^2.3.7",
     "mongoose": "^4.7.0",
